align columns with space between instead of fixed width

--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,12 @@ body {
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: space-between;
     flex: 1 0 auto;
     height: 100%;
-    margin: 0 5em 0 4em;
-    max-width: 1600px;
+    margin: 0 5em;
+    /*max-width: 1600px;*/
+    border: 1px solid black;
 }
 
 main {
@@ -42,17 +43,19 @@ main {
 }
 
 .col-1 {
-	-webkit-flex: 1 6 20%;
-            flex: 1 6 20%;
+	-webkit-flex: 2 6 30%;
+            flex: 2 6 30%;
     -webkit-order: 1;
             order: 1;
+    border: 1px solid blue;
 }
 
 .col-2 {
-   -webkit-flex: 3 1 60%;
-           flex: 3 1 60%;
+   -webkit-flex: 4 1 60%;
+           flex: 4 1 60%;
    -webkit-order: 2;
            order: 2;
+    border: 1px solid red;
 }
 
 .col-3 {
@@ -60,6 +63,7 @@ main {
             flex: 1 6 20%;
     -webkit-order: 3;
             order: 3;
+    border: 1px solid yellow;
 }
 
 .item-1 {
@@ -68,7 +72,6 @@ main {
 
 .item-2 {
 	order: 2;
-	padding: 1em auto;
 }
 
 .item-3 {
@@ -82,11 +85,9 @@ main {
  */
 
 header {
-    width: 100%;
-    margin: 0.5em auto;
+    margin: 0.5em 0;
     text-align: left;
     border-bottom: 1px solid #ccc;
-    position: relative; 
     z-index: 1; /* The z-index should be higher than Google Maps */
     background: black;
     height: auto;
@@ -116,12 +117,12 @@ header p {
  *
  */
 
-#map-canvas { 
-    height: 100%; 
-    width: 100%; 
-    position:absolute; 
+#map-canvas {
+    position: absolute; 
     top: 0; 
-    left: 0; 
+    right: 0;
+    left: 0;
+    bottom: 0;
     z-index: 0; /* Set z-index to 0 as it will be on a layer below search form */
 }
 
@@ -131,11 +132,15 @@ header p {
  *
  */
 
+
+.search-items {
+}
+
 .search {
 	position: relative; 
     z-index: 1; /* The z-index should be higher than Google Maps */
-    width: 19em;
-    margin: 1em auto 0;
+    /*width: 19em;*/
+    margin: 0 0 1em 0;
     padding: 0.75em;
     background: black;
     height: auto;
@@ -147,7 +152,7 @@ header p {
     
 }
 
-#buttons {
+.button {
 	
 }
 
@@ -164,7 +169,6 @@ header p {
 	margin: 0;
 	padding: 0;
 	height: 25em;
-	width:auto;
 	overflow:hidden;
 	overflow-y:scroll;
 }
@@ -356,22 +360,38 @@ footer {
 
 /* Portrait */
 @media only screen and (max-width: 568px) and (orientation: portrait) {
+
+	body {
+		margin: 0;
+	}
+
+	.flex-container {
+  		justify-content: flex-start;
+  		align-items: flex-start;
+  		margin: 0 0.5em;
+  	}
+
+	header {
+        width: 100%;
+	}
+
   	header p {
   		display: none;
   	}
 
+  	.search {
+  		margin: 0;
+  	}
+
+  	.col-2,
+  	.col-3 {
+  		display: none;
+  	}
+
+    .button {
+  	#tag-cloud,
+  	#search-results {
+  		display: none;
+  	}
+
 }
-
-/* Too narrow to support three columns */
-@media all and (max-width: 640px) {
-  
-   main, .row {
-    -webkit-flex-flow: column;
-            flex-direction: column;
-   }
-
-   .row > .col-1, .row > .col-2, .row > .col-3 {
-    /* Return them to document order */
-    -webkit-order: 0;
-            order: 0;
-   }
